--- a/viewsCustomers.html
+++ b/viewsCustomers.html
@@ -1,46 +1,75 @@
-<h3>العملاء</h3>
+<div class="container-fluid">
+    <h3 class="text-primary mb-4"><i class="fas fa-users me-2"></i> إدارة العملاء</h3>
 
-<table>
-    <tr>
-        <th>الاسم</th>
-        <th>الهاتف</th>
-        <th>العنوان</th>
-        <th>إجراء</th>
-    </tr>
-    <tr>
-        <td>أحمد محمد</td>
-        <td>01001234567</td>
-        <td>القاهرة</td>
-        <td><button onclick="alert('تم حذف أحمد')">حذف</button></td>
-    </tr>
-    <tr>
-        <td>فاطمة علي</td>
-        <td>01109876543</td>
-        <td>الجيزة</td>
-        <td><button onclick="alert('تم حذف فاطمة')">حذف</button></td>
-    </tr>
-</table>
+    <!-- الجدول -->
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                    <thead class="table-primary">
+                        <tr>
+                            <th>الاسم</th>
+                            <th>الهاتف</th>
+                            <th>العنوان</th>
+                            <th>الإجراء</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>أحمد محمد</td>
+                            <td>01001234567</td>
+                            <td>القاهرة</td>
+                            <td><button class="btn btn-danger btn-sm" onclick="alert('تم حذف العميل')"><i class="fas fa-trash"></i> حذف</button></td>
+                        </tr>
+                        <tr>
+                            <td>فاطمة علي</td>
+                            <td>01109876543</td>
+                            <td>الجيزة</td>
+                            <td><button class="btn btn-danger btn-sm" onclick="alert('تم حذف العميل')"><i class="fas fa-trash"></i> حذف</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
-<hr>
-
-<h4>إضافة عميل جديد</h4>
-<input type="text" id="name" placeholder="الاسم" />
-<input type="text" id="phone" placeholder="الهاتف" />
-<input type="text" id="address" placeholder="العنوان" />
-<button onclick="addCustomer()">حفظ</button>
+    <!-- فورم الإضافة -->
+    <div class="card shadow-sm mt-4">
+        <div class="card-body">
+            <h5 class="card-title"><i class="fas fa-user-plus me-2"></i> إضافة عميل جديد</h5>
+            <form class="row g-3">
+                <div class="col-md-4">
+                    <input type="text" class="form-control" placeholder="الاسم الكامل" id="name">
+                </div>
+                <div class="col-md-4">
+                    <input type="text" class="form-control" placeholder="رقم الهاتف" id="phone">
+                </div>
+                <div class="col-md-4">
+                    <input type="text" class="form-control" placeholder="العنوان" id="address">
+                </div>
+                <div class="col-12">
+                    <button type="button" class="btn btn-success" onclick="addCustomer()">
+                        <i class="fas fa-save me-2"></i> حفظ العميل
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 <script>
 function addCustomer() {
     const name = document.getElementById('name').value;
     const phone = document.getElementById('phone').value;
-    const address = document.getElementById('address').value;
-    
     if (name && phone) {
         alert(`تم حفظ العميل: ${name}`);
-        // إعادة تحميل الشاشة
+        document.getElementById('name').value = '';
+        document.getElementById('phone').value = '';
+        document.getElementById('address').value = '';
+        // تحديث الجدول (محاكاة)
         LoadView('Customers');
     } else {
-        alert('املأ كل الحقول');
+        alert('يرجى ملء الاسم ورقم الهاتف');
     }
 }
 </script>
