--- a/index.html
+++ b/index.html
@@ -3,116 +3,96 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>نظام ERP - نموذج أولي</title>
+    <title>نظام ERP - لوحة التحكم</title>
 
-    <!-- Bootstrap 5 + Font Awesome -->
+    <!-- Bootstrap + Font Awesome + Animate.css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="bg-light">
+<body class="bg-gradient">
 
-    <!-- القائمة الجانبية -->
-    <nav class="sidebar bg-primary text-white vh-100 position-fixed p-3" style="width: 260px; z-index: 1000;">
-        <div class="text-center mb-4">
-            <h4 class="text-white"><i class="fas fa-cogs me-2"></i> نظام ERP</h4>
+    <!-- شريط علوي -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="#">
+                <i class="fas fa-cogs me-2"></i> ERP Pro
+            </a>
+            <div class="d-flex align-items-center text-white">
+                <i class="fas fa-search me-3"></i>
+                <i class="fas fa-bell me-3"></i>
+                <span>شادي إبراهيم</span>
+            </div>
         </div>
-        <ul class="nav flex-column">
-
-            <!-- بيانات رئيسية -->
-            <li class="nav-item">
-                <a class="nav-link text-white" data-bs-toggle="collapse" href="#dataSubmenu">
-                    <i class="fas fa-database me-2"></i> بيانات رئيسية
-                </a>
-                <div class="collapse" id="dataSubmenu">
-                    <ul class="nav flex-column ms-3">
-                        <li><a class="nav-link text-white" onclick="LoadView('MStores')"><i class="fas fa-warehouse me-2"></i> المخازن</a></li>
-                        <li><a class="nav-link text-white" onclick="LoadView('Customers')"><i class="fas fa-users me-2"></i> العملاء</a></li>
-                        <li><a class="nav-link text-white" onclick="LoadView('Suppliers')"><i class="fas fa-truck me-2"></i> الموردين</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <!-- المبيعات -->
-            <li class="nav-item">
-                <a class="nav-link text-white" data-bs-toggle="collapse" href="#salesSubmenu">
-                    <i class="fas fa-shopping-cart me-2"></i> المبيعات
-                </a>
-                <div class="collapse" id="salesSubmenu">
-                    <ul class="nav flex-column ms-3">
-                        <li><a class="nav-link text-white" onclick="LoadView('P_SalesInvoice')"><i class="fas fa-file-invoice me-2"></i> فاتورة مبيعات</a></li>
-                        <li><a class="nav-link text-white" onclick="LoadView('P_SalesReturn')"><i class="fas fa-undo me-2"></i> مرتجع مبيعات</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <!-- المشتريات -->
-            <li class="nav-item">
-                <a class="nav-link text-white" data-bs-toggle="collapse" href="#purchasingSubmenu">
-                    <i class="fas fa-shopping-bag me-2"></i> المشتريات
-                </a>
-                <div class="collapse" id="purchasingSubmenu">
-                    <ul class="nav flex-column ms-3">
-                        <li><a class="nav-link text-white" onclick="LoadView('P_PurchasingInvoice')"><i class="fas fa-file-invoice-dollar me-2"></i> فاتورة مشتريات</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <!-- الموظفين -->
-            <li class="nav-item">
-                <a class="nav-link text-white" onclick="LoadView('Employees')">
-                    <i class="fas fa-user-tie me-2"></i> الموظفين
-                </a>
-            </li>
-
-        </ul>
     </nav>
 
-    <!-- المحتوى الرئيسي -->
-    <div id="page-content" class="container-fluid" style="margin-right: 270px; padding: 30px;">
-        <!-- Dashboard الرئيسي -->
-        <h2 class="text-primary mb-4"><i class="fas fa-home me-2"></i> لوحة التحكم</h2>
+    <!-- Dashboard الأيقونات -->
+    <div class="container mt-5" id="dashboard">
+        <h2 class="text-center text-white mb-5 animate__animated animate__fadeIn">لوحة التحكم</h2>
         <div class="row g-4">
-            <div class="col-md-3">
-                <div class="card text-white bg-primary shadow-sm">
-                    <div class="card-body">
-                        <h5><i class="fas fa-users"></i> عدد العملاء</h5>
-                        <h3 class="mb-0">150</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card text-white bg-success shadow-sm">
-                    <div class="card-body">
-                        <h5><i class="fas fa-coins"></i> المبيعات اليوم</h5>
-                        <h3 class="mb-0">25,000 جنيه</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card text-white bg-warning shadow-sm">
-                    <div class="card-body">
-                        <h5><i class="fas fa-box"></i> المخزون</h5>
-                        <h3 class="mb-0">1,240 صنف</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card text-white bg-danger shadow-sm">
-                    <div class="card-body">
-                        <h5><i class="fas fa-exclamation-triangle"></i> تنبيهات</h5>
-                        <h3 class="mb-0">3</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="mt-5 text-center text-muted">
-            <p class="lead">اختر من القائمة الجانبية لعرض الشاشة</p>
+            <!-- العملاء -->
+            <div class="col-6 col-md-4 col-lg-3">
+                <div class="icon-card bg-gradient-purple animate__animated animate__zoomIn" onclick="loadPage('pages/customers.html')">
+                    <i class="fas fa-users fa-3x"></i>
+                    <h5>العملاء</h5>
+                    <p>150 عميل</p>
+                </div>
+            </div>
+
+            <!-- المبيعات -->
+            <div class="col-6 col-md-4 col-lg-3">
+                <div class="icon-card bg-gradient-blue" onclick="loadPage('pages/sales.html')">
+                    <i class="fas fa-chart-line fa-3x"></i>
+                    <h5>المبيعات</h5>
+                    <p>25,000 جنيه</p>
+                </div>
+            </div>
+
+            <!-- المخزون -->
+            <div class="col-6 col-md-4 col-lg-3">
+                <div class="icon-card bg-gradient-green" onclick="loadPage('pages/inventory.html')">
+                    <i class="fas fa-boxes fa-3x"></i>
+                    <h5>المخزون</h5>
+                    <p>1,240 صنف</p>
+                </div>
+            </div>
+
+            <!-- الفواتير -->
+            <div class="col-6 col-md-4 col-lg-3">
+                <div class="icon-card bg-gradient-orange">
+                    <i class="fas fa-file-invoice-dollar fa-3x"></i>
+                    <h5>الفواتير</h5>
+                    <p>42 فاتورة</p>
+                </div>
+            </div>
+
+            <!-- الموظفين -->
+            <div class="col-6 col-md-4 col-lg-3">
+                <div class="icon-card bg-gradient-teal">
+                    <i class="fas fa-user-tie fa-3x"></i>
+                    <h5>الموظفين</h5>
+                    <p>18 موظف</p>
+                </div>
+            </div>
+
+            <!-- الإعدادات -->
+            <div class="col-6 col-md-4 col-lg-3">
+                <div class="icon-card bg-gradient-gray">
+                    <i class="fas fa-cog fa-3x"></i>
+                    <h5>الإعدادات</h5>
+                    <p>تخصيص النظام</p>
+                </div>
+            </div>
+
         </div>
     </div>
 
-    <!-- Bootstrap JS + Custom JS -->
+    <!-- حاوية الصفحات -->
+    <div id="page-container" class="d-none"></div>
+
+    <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
