--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </div>
     </nav>
 
-    <!-- Dashboard الأيقونات -->
+    <!-- Dashboard -->
     <div class="container mt-5" id="dashboard">
         <h2 class="text-center text-white mb-5 animate__animated animate__fadeIn">لوحة التحكم</h2>
         <div class="row g-4">
 
             <!-- العملاء -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-purple animate__animated animate__zoomIn" onclick="loadPage('/pages/customers.html')">
+                <div class="icon-card bg-gradient-purple animate__animated animate__zoomIn" onclick="loadPage('customers.html')">
                     <i class="fas fa-users fa-3x"></i>
                     <h5>العملاء</h5>
                     <p>150 عميل</p>
@@ -43,7 +43,7 @@
 
             <!-- المبيعات -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-blue" onclick="loadPage('/pages/sales.html')">
+                <div class="icon-card bg-gradient-blue" onclick="loadPage('sales.html')">
                     <i class="fas fa-chart-line fa-3x"></i>
                     <h5>المبيعات</h5>
                     <p>25,000 جنيه</p>
@@ -52,15 +52,12 @@
 
             <!-- المخزون -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-green" onclick="loadPage('/pages/inventory.html')">
+                <div class="icon-card bg-gradient-green" onclick="loadPage('inventory.html')">
                     <i class="fas fa-boxes fa-3x"></i>
                     <h5>المخزون</h5>
                     <p>1,240 صنف</p>
                 </div>
             </div>
-
-            <!-- باقي الأيقونات بنفس الطريقة -->
-            <!-- ... -->
 
         </div>
     </div>
