--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- شريط علوي -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">
+            <a class="navbar-brand fw-bold" href="index.html">
                 <i class="fas fa-cogs me-2"></i> ERP Pro
             </a>
             <div class="d-flex align-items-center text-white">
@@ -34,7 +34,7 @@
 
             <!-- العملاء -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-purple animate__animated animate__zoomIn" onclick="loadPage('customers.html')">
+                <div class="icon-card bg-gradient-purple animate__animated animate__zoomIn" onclick="goToPage('pages/customers.html')">
                     <i class="fas fa-users fa-3x"></i>
                     <h5>العملاء</h5>
                     <p>150 عميل</p>
@@ -43,7 +43,7 @@
 
             <!-- المبيعات -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-blue" onclick="loadPage('sales.html')">
+                <div class="icon-card bg-gradient-blue" onclick="goToPage('pages/sales.html')">
                     <i class="fas fa-chart-line fa-3x"></i>
                     <h5>المبيعات</h5>
                     <p>25,000 جنيه</p>
@@ -52,7 +52,7 @@
 
             <!-- المخزون -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-green" onclick="loadPage('inventory.html')">
+                <div class="icon-card bg-gradient-green" onclick="goToPage('pages/inventory.html')">
                     <i class="fas fa-boxes fa-3x"></i>
                     <h5>المخزون</h5>
                     <p>1,240 صنف</p>
@@ -61,9 +61,6 @@
 
         </div>
     </div>
-
-    <!-- حاوية الصفحات -->
-    <div id="page-container" class="d-none"></div>
 
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
