--- a/pagescustomers.html
+++ b/pagescustomers.html
@@ -1,33 +1,55 @@
-<div class="container-fluid">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-        <h3><i class="fas fa-users text-primary"></i> إدارة العملاء</h3>
-        <button class="btn btn-outline-secondary" onclick="goBack()">
-            <i class="fas fa-arrow-right"></i> رجوع
-        </button>
-    </div>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>العملاء - ERP Pro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body class="bg-light">
 
-    <div class="card shadow-sm">
-        <div class="card-body">
-            <div class="table-responsive">
-                <table class="table table-hover">
-                    <thead class="table-light">
-                        <tr>
-                            <th>الاسم</th>
-                            <th>الهاتف</th>
-                            <th>الرصيد</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>أحمد محمد</td>
-                            <td>0100...</td>
-                            <td class="text-success">5,200 ج.م</td>
-                            <td><button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button></td>
-                        </tr>
-                    </tbody>
-                </table>
+    <!-- شريط علوي -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="../index.html">
+                <i class="fas fa-arrow-left me-2"></i> رجوع للرئيسية
+            </a>
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <h3 class="text-primary mb-4"><i class="fas fa-users"></i> إدارة العملاء</h3>
+
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead class="table-light">
+                            <tr>
+                                <th>الاسم</th>
+                                <th>الهاتف</th>
+                                <th>الرصيد</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>أحمد محمد</td>
+                                <td>0100...</td>
+                                <td class="text-success">5,200 ج.م</td>
+                                <td><button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/main.js"></script>
+</body>
+</html>
