--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-gradient">
 
     <!-- شريط علوي -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="index.html">
                 <i class="fas fa-cogs me-2"></i> ERP Pro
@@ -28,9 +28,9 @@
     </nav>
 
     <!-- Dashboard -->
-    <div class="container mt-5" id="dashboard">
+    <div class="container mt-5 pt-5" id="dashboard">
         <h2 class="text-center text-white mb-5 animate__animated animate__fadeIn">لوحة التحكم</h2>
-        <div class="row g-4">
+        <div class="row g-4 justify-content-center">
 
             <!-- العملاء -->
             <div class="col-6 col-md-4 col-lg-3">
@@ -43,7 +43,7 @@
 
             <!-- المبيعات -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-blue" onclick="goToPage('pages/sales.html')">
+                <div class="icon-card bg-gradient-blue animate__animated animate__zoomIn" onclick="goToPage('pages/sales.html')">
                     <i class="fas fa-chart-line fa-3x"></i>
                     <h5>المبيعات</h5>
                     <p>25,000 جنيه</p>
@@ -52,13 +52,12 @@
 
             <!-- المخزون -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-green" onclick="goToPage('pages/inventory.html')">
+                <div class="icon-card bg-gradient-green animate__animated animate__zoomIn" onclick="goToPage('pages/inventory.html')">
                     <i class="fas fa-boxes fa-3x"></i>
                     <h5>المخزون</h5>
                     <p>1,240 صنف</p>
                 </div>
             </div>
-
         </div>
     </div>
 
