--- a/pagescustomers.html
+++ b/pagescustomers.html
@@ -9,47 +9,95 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" />
 </head>
-<body class="bg-light">
+<body class="page-enter bg-light">
 
-    <!-- شريط علوي -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="../index.html">
-                <i class="fas fa-arrow-left me-2"></i> رجوع للرئيسية
+                <i class="fas fa-arrow-left me-2"></i> رجوع
             </a>
         </div>
     </nav>
 
     <div class="container mt-5">
-        <h3 class="text-primary mb-4"><i class="fas fa-users"></i> إدارة العملاء</h3>
+        <h3 class="text-primary mb-4 animate__animated animate__fadeInDown">
+            <i class="fas fa-users"></i> إدارة العملاء
+        </h3>
 
-        <div class="card shadow-sm">
+        <div class="card shadow-sm animate__animated animate__fadeInUp">
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-hover">
+                    <table class="table table-striped table-hover align-middle">
                         <thead class="table-light">
                             <tr>
                                 <th>الاسم</th>
                                 <th>الهاتف</th>
                                 <th>الرصيد</th>
-                                <th></th>
+                                <th>إجراء</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="customerTable">
                             <tr>
                                 <td>أحمد محمد</td>
-                                <td>0100...</td>
-                                <td class="text-success">5,200 ج.م</td>
-                                <td><button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button></td>
+                                <td>01001234567</td>
+                                <td class="text-success">5200 ج.م</td>
+                                <td><button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button></td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
+
+        <div class="card shadow-sm mt-4 animate__animated animate__fadeInUp">
+            <div class="card-body">
+                <h5><i class="fas fa-user-plus me-2 text-success"></i> إضافة عميل جديد</h5>
+                <form class="row g-3 mt-2">
+                    <div class="col-md-4">
+                        <input type="text" class="form-control" placeholder="الاسم الكامل" id="name">
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" class="form-control" placeholder="رقم الهاتف" id="phone">
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" class="form-control" placeholder="العنوان" id="address">
+                    </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-success" onclick="addCustomer()">
+                            <i class="fas fa-save me-2"></i> حفظ العميل
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/main.js"></script>
+    <script>
+        function addCustomer() {
+            const name = document.getElementById('name').value.trim();
+            const phone = document.getElementById('phone').value.trim();
+            const address = document.getElementById('address').value.trim();
+
+            if (!name || !phone) {
+                alert('يرجى إدخال الاسم ورقم الهاتف');
+                return;
+            }
+
+            const table = document.getElementById('customerTable');
+            const row = document.createElement('tr');
+            row.innerHTML = `
+                <td>${name}</td>
+                <td>${phone}</td>
+                <td>0 ج.م</td>
+                <td><button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button></td>
+            `;
+            table.appendChild(row);
+
+            document.getElementById('name').value = '';
+            document.getElementById('phone').value = '';
+            document.getElementById('address').value = '';
+        }
+    </script>
 </body>
 </html>
