--- a/pagessales.html
+++ b/pagessales.html
@@ -1,7 +1,21 @@
-<div class="container-fluid">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>المبيعات - ERP Pro</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../css/style.css">
+</head>
+<body class="page-enter bg-light">
+<div class="container mt-5">
     <div class="d-flex justify-content-between mb-4">
         <h3><i class="fas fa-chart-line text-success"></i> المبيعات</h3>
         <button class="btn btn-outline-secondary" onclick="goBack()">رجوع</button>
     </div>
-    <div class="alert alert-info">شاشة المبيعات قيد التطوير...</div>
+    <div class="alert alert-info animate__animated animate__fadeIn">شاشة المبيعات قيد التطوير...</div>
 </div>
+<script src="../js/main.js"></script>
+</body>
+</html>
