--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>نظام ERP - لوحة التحكم</title>
+    <title>ERPClone - GPT TEST 8</title>
 
     <!-- Bootstrap + Font Awesome + Animate.css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="index.html">
-                <i class="fas fa-cogs me-2"></i> ERP Pro
+                <i class="fas fa-cogs me-2"></i> ERPClone - GPT TEST 8
             </a>
             <div class="d-flex align-items-center text-white">
                 <i class="fas fa-search me-3"></i>
@@ -28,38 +28,60 @@
     </nav>
 
     <!-- Dashboard -->
-    <div class="container mt-5 pt-5" id="dashboard">
-        <h2 class="text-center text-white mb-5 animate__animated animate__fadeIn">لوحة التحكم</h2>
+    <main class="container mt-5 pt-5" id="dashboard">
+        <h2 class="text-center text-white mb-5 animate__animated animate__fadeIn">لوحة التحكم - ERPClone</h2>
+
         <div class="row g-4 justify-content-center">
 
             <!-- العملاء -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-purple animate__animated animate__zoomIn" onclick="goToPage('pages/customers.html')">
-                    <i class="fas fa-users fa-3x"></i>
-                    <h5>العملاء</h5>
-                    <p>150 عميل</p>
+                <div class="icon-wrap">
+                    <div class="icon-card bg-gradient-purple animate__animated animate__bounceIn" 
+                         data-page="pages/customers.html" tabindex="0" aria-label="العملاء">
+                        <div class="icon-inner">
+                            <i class="fas fa-users fa-3x"></i>
+                        </div>
+                        <h5>العملاء</h5>
+                        <p class="muted">150 عميل</p>
+                    </div>
                 </div>
             </div>
 
             <!-- المبيعات -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-blue animate__animated animate__zoomIn" onclick="goToPage('pages/sales.html')">
-                    <i class="fas fa-chart-line fa-3x"></i>
-                    <h5>المبيعات</h5>
-                    <p>25,000 جنيه</p>
+                <div class="icon-wrap">
+                    <div class="icon-card bg-gradient-blue animate__animated animate__bounceIn" 
+                         data-page="pages/sales.html" tabindex="0" aria-label="المبيعات">
+                        <div class="icon-inner">
+                            <i class="fas fa-chart-line fa-3x"></i>
+                        </div>
+                        <h5>المبيعات</h5>
+                        <p class="muted">25,000 جنيه</p>
+                    </div>
                 </div>
             </div>
 
             <!-- المخزون -->
             <div class="col-6 col-md-4 col-lg-3">
-                <div class="icon-card bg-gradient-green animate__animated animate__zoomIn" onclick="goToPage('pages/inventory.html')">
-                    <i class="fas fa-boxes fa-3x"></i>
-                    <h5>المخزون</h5>
-                    <p>1,240 صنف</p>
+                <div class="icon-wrap">
+                    <div class="icon-card bg-gradient-green animate__animated animate__bounceIn" 
+                         data-page="pages/inventory.html" tabindex="0" aria-label="المخزون">
+                        <div class="icon-inner">
+                            <i class="fas fa-boxes fa-3x"></i>
+                        </div>
+                        <h5>المخزون</h5>
+                        <p class="muted">1,240 صنف</p>
+                    </div>
                 </div>
             </div>
+
         </div>
-    </div>
+    </main>
+
+    <!-- footer (اختياري) -->
+    <footer class="text-center text-white-50 mt-5 mb-3">
+        <small>ERPClone • GPT TEST 8</small>
+    </footer>
 
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
