--- a/pagescustomers.html
+++ b/pagescustomers.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>العملاء - ERP Pro</title>
+    <title>العملاء - ERPClone</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body class="page-enter bg-light">
@@ -20,11 +19,9 @@
     </nav>
 
     <div class="container mt-5">
-        <h3 class="text-primary mb-4 animate__animated animate__fadeInDown">
-            <i class="fas fa-users"></i> إدارة العملاء
-        </h3>
+        <h3 class="text-primary mb-4"><i class="fas fa-users"></i> إدارة العملاء</h3>
 
-        <div class="card shadow-sm animate__animated animate__fadeInUp">
+        <div class="card shadow-sm mb-4">
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-striped table-hover align-middle">
@@ -32,16 +29,22 @@
                             <tr>
                                 <th>الاسم</th>
                                 <th>الهاتف</th>
-                                <th>الرصيد</th>
-                                <th>إجراء</th>
+                                <th>العنوان</th>
+                                <th>الإجراء</th>
                             </tr>
                         </thead>
                         <tbody id="customerTable">
                             <tr>
                                 <td>أحمد محمد</td>
                                 <td>01001234567</td>
-                                <td class="text-success">5200 ج.م</td>
-                                <td><button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button></td>
+                                <td>القاهرة</td>
+                                <td><button class="btn btn-danger btn-sm" onclick="deleteRow(this)"><i class="fas fa-trash"></i> حذف</button></td>
+                            </tr>
+                            <tr>
+                                <td>فاطمة علي</td>
+                                <td>01109876543</td>
+                                <td>الجيزة</td>
+                                <td><button class="btn btn-danger btn-sm" onclick="deleteRow(this)"><i class="fas fa-trash"></i> حذف</button></td>
                             </tr>
                         </tbody>
                     </table>
@@ -49,10 +52,10 @@
             </div>
         </div>
 
-        <div class="card shadow-sm mt-4 animate__animated animate__fadeInUp">
+        <div class="card shadow-sm">
             <div class="card-body">
-                <h5><i class="fas fa-user-plus me-2 text-success"></i> إضافة عميل جديد</h5>
-                <form class="row g-3 mt-2">
+                <h5 class="card-title"><i class="fas fa-user-plus me-2"></i> إضافة عميل جديد</h5>
+                <form class="row g-3" onsubmit="return false;">
                     <div class="col-md-4">
                         <input type="text" class="form-control" placeholder="الاسم الكامل" id="name">
                     </div>
@@ -87,16 +90,28 @@
             const table = document.getElementById('customerTable');
             const row = document.createElement('tr');
             row.innerHTML = `
-                <td>${name}</td>
-                <td>${phone}</td>
-                <td>0 ج.م</td>
-                <td><button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button></td>
+                <td>${escapeHtml(name)}</td>
+                <td>${escapeHtml(phone)}</td>
+                <td>${escapeHtml(address)}</td>
+                <td><button class="btn btn-danger btn-sm" onclick="deleteRow(this)"><i class="fas fa-trash"></i> حذف</button></td>
             `;
             table.appendChild(row);
 
             document.getElementById('name').value = '';
             document.getElementById('phone').value = '';
             document.getElementById('address').value = '';
+        }
+
+        function deleteRow(btn){
+            if(confirm('هل تريد حقًا حذف هذا العميل؟')){
+                const tr = btn.closest('tr');
+                tr.parentNode.removeChild(tr);
+            }
+        }
+
+        // دالة بسيطة للهروب من النصوص (سلامة)
+        function escapeHtml(text){
+            return text.replace(/[&<>"']/g, function(m){ return {'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]; });
         }
     </script>
 </body>
